Fix for scrolling pages and update user on mobile

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -16,7 +16,8 @@ h1 {
 
 body {
   background-image: linear-gradient(#181818, #3f3f3f 30%);
-  height: 100vh;
+  min-height: 100vh;
+  min-height: -webkit-fill-available;
   color: white;
   text-align: center;
 }
